[gd_scene load_steps=2 format=3 uid="uid://bv4q12hq77fbw"]

[ext_resource type="Script" uid="uid://dscladj6dne12" path="res://scenes/arena/ArenaLobby.gd" id="1"]

[node name="ArenaLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -300.0
offset_right = 150.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
text = "ARENA - PvP 1v1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostButton" type="Button" parent="UI/MenuContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Host Match"

[node name="JoinButton" type="Button" parent="UI/MenuContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Join Match"

[node name="BackButton" type="Button" parent="UI/MenuContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Back to Town"

[node name="HostPanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="UI/HostPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostLabel" type="Label" parent="UI/HostPanel/VBox"]
layout_mode = 2
text = "Host Match"
horizontal_alignment = 1

[node name="PortLabel" type="Label" parent="UI/HostPanel/VBox"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="UI/HostPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -30.0
offset_right = 80.0
grow_horizontal = 2
grow_vertical = 2
text = "7777"
alignment = 1

[node name="StartHostButton" type="Button" parent="UI/HostPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -90.0
offset_right = 80.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Start Server"

[node name="CancelButton" type="Button" parent="UI/HostPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -40.0
offset_right = 80.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Cancel"

[node name="StatusLabel" type="Label" parent="UI/HostPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="JoinPanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoinLabel" type="Label" parent="UI/JoinPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Join Match"
horizontal_alignment = 1

[node name="AddressLabel" type="Label" parent="UI/JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = -80.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "IP:"

[node name="AddressInput" type="LineEdit" parent="UI/JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="UI/JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -20.0
offset_right = -80.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="UI/JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -20.0
offset_right = 150.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "7777"

[node name="ConnectButton" type="Button" parent="UI/JoinPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -90.0
offset_right = 80.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Connect"

[node name="CancelButton" type="Button" parent="UI/JoinPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -40.0
offset_right = 80.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Cancel"

[node name="StatusLabel" type="Label" parent="UI/JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="WaitingPanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaitingLabel" type="Label" parent="UI/WaitingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Waiting..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ReadyButton" type="Button" parent="UI/WaitingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "Ready"

[node name="CancelButton" type="Button" parent="UI/WaitingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 55.0
offset_right = 80.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
text = "Cancel"
